package org.tool.kit.model

enum class JunkMode(val title: String) {
    SINGLE("单AAR模式"),
    MULTI("多AAR模式")
}